k8s/sample/configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-configmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-configmap-app
  template:
    metadata:
      labels:
        app: sample-configmap-app
    spec:
      containers:
        - name: container-1
          image: ubuntu:latest
          tty: true
        - name: container-2
          image: ubuntu:latest
          tty: true
          volumeMounts:
            - name: sample-1
              mountPath: /etc/sample-volume
            - name: sample-2
              mountPath: /etc/sample-volume
      volumes:
        - name: sample-1
          configMap:
            name: sample-configmap
            items:
              - key: port
                path: port.txt
        - name: sample-2
          configMap:
            name: sample-configmap
