k8s/sample/initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-initcontainer
spec:
  containers:
    - name: nginx
      image: nginx:latest
      volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/
  restartPolicy: Always
  volumes:
    - name: html-volume
      emptyDir: {}
