k8s/sample/secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-secret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-secret-app
  template:
    metadata:
      labels:
        app: sample-secret-app
    spec:
      containers:
        - name: container-1
          image: ubuntu:latest
          tty: true
        - name: container-2
          image: ubuntu:latest
          tty: true
          volumeMounts:
            - name: sample2
              mountPath: /etc/sample-secret
      volumes:
        - name: sample1
          secret:
            secretName: sample-secret
        - name: sample2
          secret:
            secretName: sample-secret
            items:
              - key: username
                path: username.txt
