k8s/sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  rules:
    - host: sample.example.com
      http:
        paths:
          - path: /path1
            pathType: Prefix
            backend:
              service:
                name: sample-ingress-svc1
                port: 8888
          - path: /path2
            pathType: ImplementationSpecific
            backend:
              service:
                name: sample-ingress-svc2
                port: 8888
  backend:
    service:
      name: sample-ingress-default
      port: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc1
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app: sample-ingress-svc1
